<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:text="Espresso App"
            android:textAlignment="center"
            android:textColor="#782F18"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="113dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/coffee" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:text="@string/levels_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <me.itangqi.waveloadingview.WaveLoadingView
            android:id="@+id/waveLoadingView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10dp"
            app:wlv_borderWidth="3dp"
            app:wlv_round_rectangle="true"
            app:wlv_shapeType="rectangle"
            app:wlv_titleCenterSize="24sp"
            app:wlv_titleCenterStrokeWidth="3dp"
            app:wlv_triangle_direction="north"
            app:wlv_waveAmplitude="60" />

        <me.itangqi.waveloadingview.WaveLoadingView
            android:id="@+id/waveLoadingView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10dp"
            app:wlv_borderWidth="3dp"
            app:wlv_round_rectangle="true"
            app:wlv_shapeType="rectangle"
            app:wlv_titleCenterSize="24sp"
            app:wlv_titleCenterStrokeWidth="3dp"
            app:wlv_triangle_direction="north"
            app:wlv_waveAmplitude="0.1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/out_of_stock_text"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buyCoffeeBtn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:shadowColor="#FFD500"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/buy_coffee_text"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:text="@string/monthly_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/goMonthlyConsumptionBtn"
            android:layout_width="150dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            app:srcCompat="@drawable/calendar" />
    </LinearLayout>
</LinearLayout>